Fix: Correct Callback Button alignment to Bottom Right

--- a/frontend/src/components/QuickCallbackWidget.css
+++ b/frontend/src/components/QuickCallbackWidget.css
@@ -1,7 +1,7 @@
 .callback-widget {
   position: fixed;
   bottom: 30px;
-  left: 30px;
+  right: 30px;
   z-index: 9999;
 }
 
